# bfd-monitor

./: flake.nix  pyproject.toml
src/bfd_monitor/: __init__.py  main.py  peer.py
src/bfdd/: bfdd_pb2.py  bfdd_pb2_grpc.py
src/gobgp/: attribute_pb2.py  capability_pb2.py  gobgp_pb2.py  gobgp_pb2_grpc.py
